// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props={} renders correctly 1`] = `
<WithStyles(Card)>
  
  <form
    onSubmit={[Function]}
  >
    <WithStyles(Typography)
      gutterBottom={true}
      variant="headline"
    >
      Load Story
    </WithStyles(Typography)>
    <TextField
      InputLabelProps={
        Object {
          "shrink": true,
        }
      }
      autoFocus={true}
      error={false}
      fullWidth={true}
      helperText=""
      label="URL"
      margin="normal"
      name="url"
      onChange={[Function]}
      placeholder="http://localhost/demo.yaml"
      required={true}
      select={false}
      spellCheck={false}
      type="url"
      value=""
    />
    <br />
    <br />
    <WithStyles(Button)
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Load
    </WithStyles(Button)>
  </form>
</WithStyles(Card)>
`;

exports[`when state.message="foo" renders correctly 1`] = `
<WithStyles(Card)>
  <WithStyles(Snackbar)
    autoHideDuration={6000}
    message="foo"
    onClose={[Function]}
    open={true}
  />
  <form
    onSubmit={[Function]}
  >
    <WithStyles(Typography)
      gutterBottom={true}
      variant="headline"
    >
      Load Story
    </WithStyles(Typography)>
    <TextField
      InputLabelProps={
        Object {
          "shrink": true,
        }
      }
      autoFocus={true}
      error={false}
      fullWidth={true}
      helperText=""
      label="URL"
      margin="normal"
      name="url"
      onChange={[Function]}
      placeholder="http://localhost/demo.yaml"
      required={true}
      select={false}
      spellCheck={false}
      type="url"
      value=""
    />
    <br />
    <br />
    <WithStyles(Button)
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Load
    </WithStyles(Button)>
  </form>
</WithStyles(Card)>
`;
